# thesis-benchmarking

./: .dir-locals.el  .envrc  .gitmodules  README.org  flake.lock.bak  flake.nix  init-venvs.sh  number_of_bits_per_exp.c  number_of_bits_per_exp.txt  pyproject.toml  scratch.py  scratch.sh  small_int_benchmark.txt  small_int_benchmark_cython.txt
polynomial_db/: READ_ME  chandra4  chandra5  chandra6  cyclic10  cyclic5  ipp2  katsura10  kotsireas  poly_list  polys.pickle  run_list.pickle  stewgou40
src/benchmarking/: __init__.py  cli.py  fundementals_graph.py  gen_polys.py  groebner_graphs.py  poly_db_parser.py  post_process.py  runner.py  small_int_graph.py
src/benchmarking/harness/: __init__.py  dummy.py  generic.py  mathematica_wrapper.py  python_flint.py  python_flint_wrapper.py  sagemath_wrapper.py  sympy.py  sympy_wrapper.py
src/benchmarking/small_int/: __init__.py  setup.py  small_int_benchmark.h  small_int_benchmark.py  small_int_benchmark_cython.c  small_int_benchmark_cython.pyx  small_int_benchmark_flint_gmp.c
