[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarking"
version = "0.0.1"
dependencies = [
  "pandas",
]
requires-python = ">=3.11"
authors = [
  {name = "Jake Moss", email = "jake.moss@student.uq.edu.au"},
]

[project.scripts]
benchmarking-cli = "benchmarking:main_cli"
